More development, squashing some bugs

--- a/src/components/CharacterDisplay.module.scss
+++ b/src/components/CharacterDisplay.module.scss
@@ -3,6 +3,7 @@
   min-width: 300px;
   box-sizing: border-box;
   margin: 5px 10px;
+  transition: background-color 1s ease-in-out;
 }
 
 .header {
@@ -46,6 +47,39 @@
 .powerBars {
   padding: 10px;
   background: rgba(0, 0, 0, 0.5);
+
+  .powerRange {
+    color: rgba(255,255,255,0.4);
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+
+    .rangeLine {
+      height: 1px;
+      width: 100%;
+      flex-basis: 100%;
+      background-color: rgba(255,255,255,0.5);
+      margin: 0 5px;
+    }
+  }
+
+  .powerLabel {
+    width: 100%;
+    height: 1em;
+    position: relative;
+
+    .indicator {
+      position: absolute;
+      top: -1px;
+      display: block;
+      padding: 2px 4px 4px;
+      border-radius: 2px;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: yellow;
+      margin-left: -1em;
+      transition: left 5s ease-out;
+    }
+  }
 }
 
 .barContainer {
@@ -63,6 +97,7 @@
     height: 100%;
     width: 2px;
     background-color: yellow;
+    transition: left 5s ease-out;
   }
 
   .filledBar {
@@ -74,5 +109,8 @@
     background-color: rgba(30,30,30,0.95);
     color: white;
     box-sizing: border-box;
+    transition: width 2s ease-out;
+    overflow-x: visible;
+    white-space: nowrap;
   }
 }
